log
Thu 16 May 2024 11:33:18 PM UTC: 
 tests:  0|5
total_score: 0/70
1c984ed
Thu 16 May 2024 11:38:50 PM UTC: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:74:1: error: control reaches end of non-void function [-Werror=return-type]
   74 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a3cef0c
Thu 16 May 2024 11:39:39 PM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
271715a
Thu 16 May 2024 11:40:36 PM UTC: 
 sudoku.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
5284f63
Thu 16 May 2024 11:41:49 PM UTC: 
 sudoku.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
cbf9c3c
Thu 16 May 2024 11:41:54 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
8231aa5
Fri 17 May 2024 12:21:08 AM UTC: 
 sudoku.c | 26 ++++++++++++++++++++++++--
 1 file changed, 24 insertions(+), 2 deletions(-)
 tests:  4|3
total_score: 30/70
a0ea995
Fri 17 May 2024 12:27:46 AM UTC: 
 sudoku.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|0
cfac634
Fri 17 May 2024 12:28:37 AM UTC: 
 sudoku.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|0
98a7187
Fri 17 May 2024 12:28:54 AM UTC: 
 sudoku.c | 10 +---------
 1 file changed, 1 insertion(+), 9 deletions(-)
 tests:  4|3
total_score: 30/70
0fed556
Fri 17 May 2024 12:34:25 AM UTC: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:51:12: error: unused variable ‘fila’ [-Werror=unused-variable]
   51 |       int *fila = n->sudo[i];
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
19091b3
Fri 17 May 2024 12:35:20 AM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|4
total_score: 10/70
4576f88
Fri 17 May 2024 12:35:51 AM UTC: 
 sudoku.c | 15 ---------------
 1 file changed, 15 deletions(-)
 tests:  4|3
total_score: 30/70
1008437
Fri 17 May 2024 12:37:07 AM UTC: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:51:11: error: unused variable ‘columna’ [-Werror=unused-variable]
   51 |       int columna[10] = {0};
      |           ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1f485d9
Fri 17 May 2024 12:37:27 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:51:11: error: unused variable ‘columna’ [-Werror=unused-variable]
   51 |       int columna[10] = {0};
      |           ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f35a419
Fri 17 May 2024 12:38:07 AM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:64:7: error: expected expression before ‘}’ token
   64 |       }
      |       ^
sudoku.c:51:11: error: unused variable ‘columna’ [-Werror=unused-variable]
   51 |       int columna[10] = {0};
      |           ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
63b9910
Fri 17 May 2024 12:40:18 AM UTC: 
 sudoku.c | 38 ++++++++++++++++++++++++++++++++++++++
 1 file changed, 38 insertions(+)
 tests:  10|0
total_score: 70/70
2e2758f
Fri 17 May 2024 12:42:12 AM UTC: 
 sudoku.c | 31 -------------------------------
 1 file changed, 31 deletions(-)
 tests:  0|0
f389126
Fri 17 May 2024 12:43:12 AM UTC: 
 sudoku.c | 31 +++++++++++++++++++++++++++++++
 1 file changed, 31 insertions(+)
 tests:  10|0
total_score: 70/70
0b89551
Fri 17 May 2024 12:43:26 AM UTC: 
 sudoku.c | 8 --------
 1 file changed, 8 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:78:14: error: variable ‘sub_columna’ set but not used [-Werror=unused-but-set-variable]
   78 |          int sub_columna[10] = {0};
      |              ^~~~~~~~~~~
sudoku.c:77:14: error: variable ‘sub_fila’ set but not used [-Werror=unused-but-set-variable]
   77 |          int sub_fila[10] = {0};
      |              ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
57f2562
Fri 17 May 2024 12:43:57 AM UTC: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  10|0
total_score: 70/70
806d5c7
